# implode

./: CMakeLists.txt  README.md
src/: explode.h  frobenius_solver.c  fuchs_solver.c  main.c  padic_ode.c  padic_ode.h  padic_ode_solution.c  solver_frobenius.c  solver_frobenius.h  solver_fuchs.c  solver_fuchs.h
tests/: CMakeLists.txt  frobenius.c  indicial_polynomial.c  indicial_polynomial_eval.c  power_series.c  power_series_frobenius.c  power_series_singleton.c  singleton_frobenius.c  solution.c  solution_extend.c  solution_update.c
